[package]
name = "ambika-mobo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambika-vc = { path = "../ambika-vc" }

panic-halt = "0.2.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"

embassy-embedded-hal = { version = "0.1.0", path = "../../embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.3.0", path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.3.0", path = "../../embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.3", path = "../../embassy/embassy-time", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", path = "../../embassy/embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }